@@ -38,6 +38,7 @@
 
 - https://github.com/eclipse-sirius/sirius-web/issues/3466[#3466] [gantt] Persist the gantt table columns
 - https://github.com/eclipse-sirius/sirius-web/issues/3447[#3447] [view] Add support for For construct in the operations DSL
+- https://github.com/eclipse-sirius/sirius-web/issues/3550[#3550] [core] Add ExtensionRegistry merge strategy
 
 === Improvements
 
